--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.settings
 /.classpath
 /.project
+
+/ecom-catalogs/.project
+/ecom-catalogs/.classpath
+/ecom-catalogs/bin
+/ecom-catalogs/target
+/ecom-catalogs/.settings
