--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.formation</groupId>
-  <artifactId>micro-ecommerce</artifactId>
-  <version>0.0.1</version>
-  <packaging>pom</packaging>
-  
-  	<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.formation</groupId>
+	<artifactId>micro-ecommerce</artifactId>
+	<version>0.0.1</version>
+	<packaging>pom</packaging>
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Camden.SR7</spring-cloud.version>
 		<spring-boot.version>1.5.10.RELEASE</spring-boot.version>
 		<spring-data-releasetrain.version>Hopper-SR1</spring-data-releasetrain.version>
+		
+		<!--set this to your docker account name -->
 		<docker.image.prefix>doum167</docker.image.prefix>
-		<docker.plugin.version>0.4.9</docker.plugin.version>
+
+		<!--Set to name of project -->
+		<docker.image.name>ecom-catalogs</docker.image.name>
 	</properties>
-	
-		<dependencyManagement>
+
+	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -83,7 +88,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-	
+
 	<build>
 		<plugins>
 			<plugin>
