--- a/ecom-catalogs/src/main/resources/application.properties
+++ b/ecom-catalogs/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-#MYSQL Configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=
+#SSL properties
+server.port=8080
 
+# DataSource
+spring.datasource.url=jdbc:mysql://mysql_ip:3306/test?autoReconnect=true&useSSL=false
+spring.datasource.username=dbuser
+spring.datasource.password=dbp4ss
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform: org.hibernate.dialect.MySQLDialect
