--- a/ecom-catalogs/src/main/resources/application.properties
+++ b/ecom-catalogs/src/main/resources/application.properties
@@ -2,10 +2,11 @@
 server.port=8080
 
 # DataSource
-spring.datasource.url=jdbc:mysql://mysql_ip:3306/test?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysqldb:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username=dbuser
 spring.datasource.password=dbp4ss
+spring.datasource.initialize=true
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform: org.hibernate.dialect.MySQLDialect
