--- a/ecom-catalogs/src/main/resources/application.properties
+++ b/ecom-catalogs/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.initialize=true
 # Hibernate
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform: org.hibernate.dialect.MySQLDialect
+
+#spring
+spring.application.name=catalogs-service
+
+#eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
