--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,6 @@
 	<modules>
 		<module>ecom-catalogs</module>
 		<module>ecom-reviews</module>
+		<module>ecom-eureka</module>
 	</modules>
 </project>
