--- a/ecom-search/src/main/resources/application.properties
+++ b/ecom-search/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.application.name=search-service
 spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.repositories.enabled=true
 spring.data.elasticsearch.cluster-nodes=elasticdb:9300
-spring.data.elasticsearch.properties.transport.tcp.connect_timeout=10s
+
+#eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+
